--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <!-- Start of Nav Bar-->
   <nav class="navbar navbar-b navbar-trans navbar-expand-md fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll" href="#page-top"><img src="img/navLogo.png" height="120" width="230"/></a>
+      <a class="navbar-brand js-scroll title2" href="#page-top">Mashrur Chowdhury</a>
       <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarDefault"
         aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span></span>
@@ -75,8 +75,8 @@
     <div class="intro-content display-table">
       <div class="table-cell">
         <div class="container">
-          <h1 class="intro-title mb-4">Hi, I'm Mashrur Chowdhury</h1>
-          <p class="intro-subtitle"><span class="text-slider-items">Full-Stack Developer, Mobile App Developer, Aspiring Data Scientist, Machine Learning Enthusiast, Digital Marketer, Lead Developer at BRDGE</span><strong class="text-slider"></strong></p>
+          <h1 class="intro-title mb-4">Hey there, I'm Mashrur</h1>
+          <p class="intro-subtitle"><span class="text-slider-items">Lead Software Engineer at BRDGE, Aspiring Data Scientist, Full-Stack Developer, Mobile App Developer, Machine Learning Enthusiast</span><strong class="text-slider"></strong></p>
           <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p>
         </div>
       </div>
@@ -107,39 +107,39 @@
                 </div>
                 <div class="skill-mf">
                   <p class="title-s">Skills</p>
-                  <span>Python</span> <span class="pull-right">100%</span>
+                  <span>Python</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="100" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Java</span> <span class="pull-right">75%</span>
+                  <span>Java</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="75" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>C++</span> <span class="pull-right">60%</span>
+                  <span>C++</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>HTML/CSS</span> <span class="pull-right">90%</span>
+                  <span>HTML/CSS</span>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>React.js</span> <span class="pull-right">45%</span>
+                  <span>React.js</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="45" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="45" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Flutter</span> <span class="pull-right">50%</span>
+                  <span>Flutter</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-                  <span>Keras</span> <span class="pull-right">60%</span>
+                  <span>Keras</span>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="60" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                 </div>
@@ -163,7 +163,7 @@
                   </p>
                   <p class="lead">
                     If there are any questions or inquiries, please do not hesitate to contact me by email at mashrurc02@gmail.com
-                    or by phone at (647)-905-5505. Thanks for checking out my portfolio.
+                    or by phone at (647)-904-5505. Thanks for checking out my portfolio.
                   </p>
                 </div>
               </div>
@@ -199,8 +199,8 @@
             <div class="service-content">
               <h2 class="s-title">Web Design</h2>
               <p class="s-description text-center">
-                Experienced in front-end development of websites
-                with HTML, CSS and JavaScript.
+                Experienced in full-stack development of websites
+                with HTML, CSS and JavaScript and the MERN Stack.
               </p>
             </div>
           </div>
@@ -280,6 +280,30 @@
             <div class="line-mf"></div>
           </div>
         </div>
+      </div>
+      <div class="row">
+          <div class="work-box work-box2">
+            <a href="https://github.com/MashyC/ML-Summarizer">
+              <div class="work-img">
+                <img src="img/minus.png" href="https://github.com/MashyC/ML-Summarizer" alt="" class="img-fluid">
+              </div>
+              <div class="work-content">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <h2 class="w-title">MINUS (SET.Hacks Winner 2020)</h2>
+                    <div class="w-more">
+                      <span class="w-ctegory">Flutter App</span> / <span class="w-date">14 Jun. 2020</span>
+                    </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <div class="w-like">
+                      <span class="ion-ios-plus-outline"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </a>
+          </div>
       </div>
       <div class="row">
         <div class="col-md-4">
