--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   </nav>
   <!-- End of Nav Bar -->
 
-  <div id="home" class="intro route bg-image" style="background-image: url(img/bg6.png)">
+  <div id="home" class="intro route bg-image" style="background-image: url(img/network.jpg)">
     <div class="overlay-itro"></div>
     <div class="intro-content display-table">
       <div class="table-cell">
