--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                   <p class="lead">
                     Hey there! My name's Mashrur Chowdhury and I'm currently a first-year student at the University of
                     Waterloo. I have a keen interest in Data Science and Machine Learning and as such, am skilled in 
-                    many lanuages and libaries. 
+                    many lanuages and libraries. 
                   </p>
                   <p class="lead">
                     Python is my most proficient language, where I have studied and dealt with Machine Learning the most,
@@ -584,7 +584,7 @@
                   <h6 class="category">Web Design</h6>
                 </div>
               </div>
-              <h3 class="card-title">Coming Soon></h3>
+              <h3 class="card-title">Coming Soon</h3>
               <p class="card-description">
                 Web Design blog coming soon...
               </p>
