--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
       </div>
       <div class="row">
           <div class="work-box work-box2">
-            <a href="https://github.com/MashyC/ML-Summarizer">
+            <a href="https://devpost.com/software/minus">
               <div class="work-img">
-                <img src="img/minus.png" href="https://github.com/MashyC/ML-Summarizer" alt="" class="img-fluid">
+                <img src="img/minus.png" href="https://devpost.com/software/minus" alt="" class="img-fluid">
               </div>
               <div class="work-content">
                 <div class="row">
